--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,21 @@
 import Result from '#features/shared/result.js'
 
 export default class FeeGetByCifUseCase {
-  async execute({ customerAccount }, feeMgmtModel) {
+  async execute({ customerAccount }) {
     global.logger.info(`Fetching fees for CIF: ${customerAccount[0].cifno}`)
 
     // Buscar Fees pelo CIF no SQL
-    const [errFees, responseFees] = await feeMgmtModel.getFeesFromSQL(customerAccount[0].cifno)
-    if (errFees) {
+    const feesData = await this.#getFeesFromSQL(customerAccount[0].cifno)
+    if (!feesData) {
       return Result.fail({ message: "It's not possible to get fee values" })
     }
     
-    const feesData = responseFees || []
-
     // Buscar Exceptions pelo FeePackageId
     global.logger.info(`Fetching exceptions for FeePackageId: ${customerAccount[0].feePackageId}`)
-    const [errExceptions, responseExceptions] = await feeMgmtModel.getExceptionFeesFromSQL(customerAccount[0].feePackageId)
-    if (errExceptions) {
+    const exceptionFees = await this.#getExceptionFeesFromSQL(customerAccount[0].feePackageId)
+    if (!exceptionFees) {
       return Result.fail({ message: "It's not possible to get exception fee values" })
     }
-    
-    const exceptionFees = responseExceptions || []
     
     // Mock de dados que ainda não existem na base SQL
     const feesActives = [
@@ -57,6 +53,20 @@ export default class FeeGetByCifUseCase {
     
     global.logger.info('End process')
     return Result.ok(result)
+  }
+
+  async #getFeesFromSQL(cifno) {
+    global.logger.info('getFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno })
+    return recordset
+  }
+
+  async #getExceptionFeesFromSQL(feePackageId) {
+    global.logger.info('getExceptionFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_exception_fees_bypackage', { feePackageId })
+    return recordset
   }
 
   #getDocumentUrl(feePackageId) {
