--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+>>>>>>>>>>>>environment>>>>>>>>>>>>> {
+  app: { name: 'Aurora API' },
+  server: { port: '3001', maxRequestBodySize: '100mb' },
+  logging: { level: 'debug', file: '' },
+  kafka: { brokers: [ 'localhost:9093' ] },
+  rabbitmq: { url: 'amqp://admin:admin@localhost:5672' },
+  caseUrl: undefined,
+  customerUrl: 'http://localhost:5000',
+  userUrl: 'http://localhost:5000',
+  feeUrl: undefined,
+  conductorUrl: undefined,
+  notifyUrl: undefined,
+  jackUrl: undefined
+}
+
+
+
 import dotenv from 'dotenv'
 import path from 'path'
 import fs from 'fs'
@@ -44,6 +61,7 @@ export default class Config {
     const envFile = '.env'
     const envPath = path.resolve(path.dirname(''), envFile)
 
+    
     // this.#logger.info(`Loading env using file ${envPath}`)
 
     if (fs.existsSync(envPath)) {
@@ -65,7 +83,7 @@ export default class Config {
     environment.feeUrl = process.env.FEE_URL
     environment.notifyUrl = process.env.NOTIFY_URL
     environment.jackUrl = process.env.JACK_URL
-
+    console.log('>>>>>>>>>>>>environment>>>>>>>>>>>>>',environment)
     return environment
   }
 
