--- a/.gitignore
+++ b/.gitignore
@@ -1,83 +1,88 @@
-import { Fee } from '#src/models/entities/Fees.js'
 import Result from '#features/shared/result.js'
-import CustomerFees from '#src/models/CustomerFees.js'
-import BankAccountFee from '#src/models/BankAccountFee.js'
-import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js'
-import { FeeCase } from '#src/models/entities/FeeCase.js'
-import { Field } from '#src/models/entities/Fields.js'
-
+import {
+  connectToFeeMgmtDb,
+  executeStoreProcedure
+} from '#core/data/mssql/index.js'
 export default class FeeGetByCifUseCase {
   async execute({ customerAccount }) {
-   // global.logger.info('FeeGetByCifUseCase()')
+    global.logger.info(`Fetching fees for CIF: ${customerAccount[0].cifno}`)
 
-    const result = { fees: [] }
-    const fees = await this.#getFeeStandard([
-      {
-        feeType: 'Customer Fees'
-      },
-      {
-        feeType: 'Bank Account Fees'
-      },
-      {
-        feeType: 'Investment Account Fees'
-      }
-    ])
-
-    const customer = new CustomerFees(fees, customerAccount)
-    if (customer.fee) result.fees.push(customer.fee)
-   // global.logger.info('After Customer Fees')
-    const bank = new BankAccountFee(fees, customerAccount)
-    if (bank.fee) result.fees.push(bank.fee)
-   // global.logger.info('After Bank Account Fees')
-    const equityField = await Field.find({ code: 7 })
-    const investiment = new InvestimentAccountFee(
-      fees,
-      customerAccount,
-      equityField[0]
-    )
-    if (investiment.fee?.feeGroups) result.fees.push(investiment.fee)
-   // global.logger.info('After Investment Account Fees')
-    const feesActives = await FeeCase.find({
+    // Buscar Fees pelo CIF no SQL
+    const feesData = await this.#getFeesFromSQL(customerAccount[0].cifno)
+    if (!feesData) {
+      return Result.fail({ message: "It's not possible to get fee values" })
+    }
+    
+    // Buscar Exceptions pelo FeePackageId
+    global.logger.info(`Fetching exceptions for FeePackageId: ${customerAccount[0].feePackageId}`)
+    const exceptionFees = await this.#getExceptionFeesFromSQL(customerAccount[0].feePackageId)
+    if (!exceptionFees) {
+      return Result.fail({ message: "It's not possible to get exception fee values" })
+    }
+    
+    // Mock de dados que ainda não existem na base SQL
+    const feesActives = [
+      { caseNumber: "12345", id: "mocked-active-fee-1" },
+      { caseNumber: "67890", id: "mocked-active-fee-2" }
+    ]
+    
+    const documentUrl = this.#getDocumentUrl(customerAccount[0].feePackageId)
+    
+    // Montando o payload final
+    const result = {
+      customerName: customerAccount[0].customerName || '',
+      customerShortName: customerAccount[0].customerShortName || '',
+      customerAddress: customerAccount[0].customerAddress || '',
+      customerAccountOfficer: customerAccount[0].customerAccountOfficer || '',
       cif: customerAccount[0].cifno,
-      status: {
-        $nin: ['DONE', 'REJECTED']
-      },
-      caseNumber: {
-        $exists: true
-      }
-    })
-   // global.logger.info('After Fees Actives')
-    result.feesActives = feesActives?.map((x) => ({
-      caseNumber: x.caseNumber,
-      id: x.id
-    }))
+      officerId: customerAccount[0].officerId || '',
+      branchCity: customerAccount[0].branchCity || '',
+      branchState: customerAccount[0].branchState || '',
+      feePackage: customerAccount[0].feePackage || '',
+      defaultFeePackageId: customerAccount[0].feePackageId || '',
+      
+      fees: feesData,
+      feesActives,
+      
+      documentUrl,
 
-    result.documentUrl =
-      'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm'
-
-   // global.logger.info(`documentUrl= ${result.document}`)
-
+      currentFees: exceptionFees.map(fee => ({
+        feeDescription: fee.FeeDescription,
+        feeCode: fee.FeeCode,
+        amount: fee.Amount,
+        frequency: fee.FreqDescription || 'Mocked Frequency'
+      }))
+    }
+    
+    global.logger.info('End process')
     return Result.ok(result)
   }
 
-  async #getFeeStandard(filter) {
-   // global.logger.info('getFeeStandard()')
+  async #getFeesFromSQL(cifno) {
+    global.logger.info('getFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno })
+    return recordset
+  }
 
-    const feeResult = []
+  async #getExceptionFeesFromSQL(feePackageId) {
+    global.logger.info('getExceptionFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_exception_fees_bypackage', { feePackageId })
+    return recordset
+  }
 
-    for await (const fee of Fee.find({
-      $or: filter
-    }).select({
-      feeType: 1,
-      feeGroups: {
-        name: 1,
-        fields: 1,
-        code: 1
-      }
-    })) {
-      feeResult.push(fee.toObject())
+  #getDocumentUrl(feePackageId) {
+    const scheduleUrls = global.environment.scheduleUrls
+    const packageMap = {
+      1: 'intlPB3',
+      2: 'uSPBIndividual3',
+      3: 'uSPBCorporation3',
+      4: 'efraPB3',
+      5: 'eraPB3'
     }
-
-    return feeResult
+    
+    const scheduleType = packageMap[feePackageId] || ''
+    return scheduleUrls[scheduleType] || ''
   }
 }
